# Installerator

./: .gitignore  Configurator  MANIFEST.in  README.md  __init__.py  base_installer.py  base_installerator.py  install.json  install.py  installer.py  installerator.py  json_format.txt  merge.py  pyproject.toml  requirements.txt  uninstall.json  uninstall.py  uninstaller.py  uninstallerator.py
_other/: old  run_as_root.py
_test/: install.json  install.py  uninstall.py
misc/: checklist.txt  todo.txt
src/: base_installerator.py  installerator.py  uninstallerator.py
src/installerator/: __init__.py  base_installerator.py  installerator.py  uninstallerator.py
tests/: install.py  uninstall.py
todo/: checklist.txt  howto.txt  run_as_root.txt  todo.txt
